--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,6 +56,7 @@
 	<!-- Session configuration. -->
 
 	<session-config>
+		<session-timeout>1</session-timeout>
 		<cookie-config>
 			<http-only>true</http-only> <!-- Prevent client side scripting from accessing/manipulating session cookie. -->
 		</cookie-config>
